[VEUE-513] fix spacing and constant naming for broadcast spec

--- a/app/javascript/style/broadcast/_browser.scss
+++ b/app/javascript/style/broadcast/_browser.scss
@@ -9,8 +9,6 @@
   &__underlay {
     flex: 1;
     background: color.$gray-dark;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
   }
 
   &__bar {
